[project]
name = "drive"
authors = [
    { name = "Frappe Technologies Pvt Ltd", email = "developers@frappe.io" },
]
description = "An easy to use, document sharing and management solution."
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    "Pillow>=10.0.0,<11.0.0",
    "opencv-python-headless>=4.10.0.84",
    "python-magic==0.4.27",
    "mimemapper==0.4.1",
    "unoconv>=0.9.0",
    "PyJWT>=2.8.0",
    "thumbnail>=1.5.0",
    "boto3==1.37.31",
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.black]
line-length = 99

[tool.isort]
line_length = 99
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
indent = "\t"

# press reads this on install
[deploy.dependencies.apt]
packages = [
    "ffmpeg",
]