[project]
name = "drive"
authors = [
    { name = "Frappe Technologies Pvt Ltd", email = "developers@frappe.io" },
]
description = "An easy to use, document sharing and management solution."
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    "opencv-python-headless>=4.10.0.84",
    "python-magic==0.4.27",
    "mimemapper==0.4.1",
    "unoconv>=0.9.0",
    "PyJWT>=2.8.0",
    "thumbnail>=1.5.0",
    "boto3~=1.34.143",
    "pycrdt==0.12.26",
    "Markdown==3.8.2",
    "beautifulsoup4~=4.13.4",
    "html2text==2025.4.15"
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.black]
line-length = 120

[tool.isort]
line_length = 120
multi_line_output = 3
include_trailing_comma = true
use_parentheses = true
ensure_newline_before_comments = true

# press reads this on install
[deploy.dependencies.apt]
packages = [
    "ffmpeg",
]

[tool.bench.frappe-dependencies.frappe]
frappe = ">=16.0.0-dev,<=17.0.0-dev"

[tool.bench.assets]
out_dir = "../drive/public/frontent"
index_html_path = "../drive/www/drive.html"

